tests: add cluster

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+###############################################################################
+# .gitignore
+###############################################################################
+
+# System test log output.
+tests/log
+
+###############################################################################
+# Go.gitignore
+###############################################################################
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
