gorqlite: add gorqlite api and docs

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ###############################################################################
 
 # System test log output.
-tests/log
+log
 
 ###############################################################################
 # Go.gitignore
